--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -192,6 +192,13 @@ ELSE(WIN32)
     ADD_DEFINITIONS(-D_TTY_POSIX_)
 ENDIF(WIN32)
 
+IF (QT_MOBILITY_LOCATION_FOUND)
+    SET(QGIS_CORE_SRCS
+        ${QGIS_CORE_SRCS}
+        gps/qgsqtlocationconnection.cpp
+        )
+ENDIF (QT_MOBILITY_LOCATION_FOUND)
+
 IF (WITH_INTERNAL_SPATIALITE)
   IF (WIN32 OR APPLE OR ANDROID)
     INCLUDE_DIRECTORIES(${ICONV_INCLUDE_DIR})
@@ -275,6 +282,13 @@ SET(QGIS_CORE_MOC_HDRS
   gps/qextserialport/qextserialport.h
   gps/qextserialport/qextserialenumerator.h
 )
+
+IF (QT_MOBILITY_LOCATION_FOUND)
+    SET(QGIS_CORE_MOC_HDRS
+        ${QGIS_CORE_MOC_HDRS}
+        gps/qgsqtlocationconnection.h
+        )
+ENDIF (QT_MOBILITY_LOCATION_FOUND)
 
 QT4_WRAP_CPP(QGIS_CORE_MOC_SRCS ${QGIS_CORE_MOC_HDRS})
 
@@ -396,6 +410,13 @@ SET(QGIS_CORE_HDRS
   qgsspatialindex.h
 )
 
+IF (QT_MOBILITY_LOCATION_FOUND)
+    SET(QGIS_CORE_HDRS
+        ${QGIS_CORE_HDRS}
+        gps/qgsqtlocationconnection.h
+        )
+ENDIF (QT_MOBILITY_LOCATION_FOUND)
+
 INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}
   composer
@@ -495,6 +516,10 @@ ENDIF (WIN32)
 IF(APPLE)
   TARGET_LINK_LIBRARIES(qgis_core "-framework CoreFoundation -framework IOKit")
 ENDIF(APPLE)
+
+IF (QT_MOBILITY_LOCATION_FOUND)
+    TARGET_LINK_LIBRARIES(qgis_core ${QT_MOBILITY_LOCATION_LIBRARY})
+ENDIF (QT_MOBILITY_LOCATION_FOUND)
 
 TARGET_LINK_LIBRARIES(qgis_core
   ${QT_QTMAIN_LIBRARY}
