debian packaging update

--- a/debian/qgis.desktop
+++ b/debian/qgis.desktop
@@ -4,6 +4,11 @@ Name=Quantum GIS
 Version=1.0
 GenericName=Geographical Information System
 GenericName[de]=Geographisches Informationssystem
+GenericName[cs]=Geografický Informační Systém
+GenericName[es]=Sistema de Información Geográfica
+GenericName[fr]=Système d'Information Géographique
+GenericName[it]=Sistema Informativo Geografico
+GenericName[pl]=System Informacji Geograficznej
 Icon=qgis-icon
 TryExec=/usr/bin/qgis
 Exec=/usr/bin/qgis %F
