debian packaging update

--- a/debian/qgis.desktop
+++ b/debian/qgis.desktop
@@ -9,6 +9,8 @@ GenericName[es]=Sistema de Información Geográfica
 GenericName[fr]=Système d'Information Géographique
 GenericName[it]=Sistema Informativo Geografico
 GenericName[pl]=System Informacji Geograficznej
+GenericName[sv]=Geografiskt Informationssystem
+GenericName[fi]=Maantieteellinen Tietojärjestelmä
 Icon=qgis-icon
 TryExec=/usr/bin/qgis
 Exec=/usr/bin/qgis %F
