--- a/debian/rules
+++ b/debian/rules
@@ -10,7 +10,7 @@ DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 DISTRIBUTION := $(shell dpkg-parsechangelog --format rfc822 | sed -ne "s/^Distribution: //p")
-ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"squeeze hardy intrepid jaunty karmic lucid maverick natty oneiric precise"))
+ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"squeeze wheezy hardy intrepid jaunty karmic lucid maverick natty oneiric precise"))
 DISTRIBUTION := sid
 endif
 
@@ -32,10 +32,10 @@ CMAKE_OPTS := \
 	-D QGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin \
 	-D WITH_APIDOC=TRUE
 
-ifeq (,$(findstring $(DISTRIBUTION),"squeeze lucid maverick natty oneiric precise sid"))
-	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=TRUE
-else
+ifeq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"hardy intrepid jaunty karmic lucid maverick natty oneiric lenny squeeze"))
 	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=FALSE
+else
+	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=TRUE
 endif
 
 ifneq (,$(findstring $(DISTRIBUTION),"sid"))
