--- a/debian/rules
+++ b/debian/rules
@@ -154,7 +154,7 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs CHANGELOG
+	dh_installchangelogs ChangeLog
 	dh_installdocs
 	dh_installexamples
 	dh_install --sourcedir=debian/tmp
