--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ DEB_BUILD_ARCH      ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 DEB_TEST_TARGET ?= Experimental
 
 DISTRIBUTION := $(shell dpkg-parsechangelog --format rfc822 | sed -ne "s/^Distribution: //p")
-ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"lenny squeeze wheezy lucid maverick natty oneiric precise"))
+ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"squeeze wheezy lucid maverick natty oneiric precise"))
 DISTRIBUTION := sid
 endif
 
@@ -43,26 +43,14 @@ CMAKE_OPTS := \
 	-D QGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin \
 	-D WITH_APIDOC=TRUE
 
-ifneq (,$(findstring $(DISTRIBUTION),"sid"))
-	CMAKE_OPTS += -D WITH_PYSPATIALITE=FALSE
+ifeq (,$(findstring $(DISTRIBUTION),"sid"))
+	CMAKE_OPTS += -D WITH_PYSPATIALITE=TRUE
 endif
 
-ifneq (,$(findstring $(DISTRIBUTION),"lenny squeeze lucid maverick natty oneiric"))
-	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=TRUE
-else
-	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=FALSE
-endif
-
-ifneq (,$(findstring $(DISTRIBUTION),"lenny squeeze lucid maverick natty oneiric"))
+ifneq (,$(findstring $(DISTRIBUTION),"squeeze lucid maverick natty oneiric"))
 	CMAKE_OPTS += -D WITH_GLOBE=FALSE
 else
 	CMAKE_OPTS += -D WITH_GLOBE=TRUE
-endif
-
-ifneq (,$(findstring $(DISTRIBUTION),"lenny"))
-	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALINDEX=TRUE
-else
-	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALINDEX=FALSE
 endif
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
