--- a/debian/rules
+++ b/debian/rules
@@ -9,6 +9,8 @@
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
+DEB_TEST_TARGET ?= Experimental
+
 DISTRIBUTION := $(shell dpkg-parsechangelog --format rfc822 | sed -ne "s/^Distribution: //p")
 ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"lenny squeeze wheezy lucid maverick natty oneiric precise"))
 DISTRIBUTION := sid
@@ -31,6 +33,10 @@ CMAKE_OPTS := \
 	-D WITH_MAPSERVER=TRUE \
 	-D QGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin \
 	-D WITH_APIDOC=TRUE
+
+ifneq (,$(findstring $(DISTRIBUTION),"sid"))
+	-D WITH_PYSPATIALITE=FALSE
+endif
 
 ifneq (,$(findstring $(DISTRIBUTION),"lenny squeeze lucid maverick natty oneiric"))
 	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=TRUE
@@ -104,7 +110,7 @@ build-stamp: debian/build/CMakeCache.txt
 
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	# Code to run the package test suite - and ignore the outcome for now
-	LD_LIBRARY_PATH=$(PWD)/debian/build/output/lib:$(LD_LIBRARY_PATH) $(MAKE) -C debian/build check || true
+	LD_LIBRARY_PATH=$(PWD)/debian/build/output/lib:$(LD_LIBRARY_PATH) xvfb-run -a -n 1 -s "-screen 0 1280x1024x24" $(MAKE) -C debian/build $(DEB_TEST_TARGET) || true
 else
 	echo Skipping tests.
 endif
