--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,7 @@
 # from having to guess our platform (since we know it already)
 DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+DEB_BUILD_ARCH      ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
 DEB_TEST_TARGET ?= Experimental
 
@@ -15,6 +16,8 @@ DISTRIBUTION := $(shell dpkg-parsechangelog --format rfc822 | sed -ne "s/^Distri
 ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"lenny squeeze wheezy lucid maverick natty oneiric precise"))
 DISTRIBUTION := sid
 endif
+
+DEB_BUILD_NAME ?= $(DISTRIBUTION)-$(DEB_BUILD_ARCH)
 
 QGIS_MAJOR=$(shell sed -ne 's/SET(CPACK_PACKAGE_VERSION_MAJOR "\([0-9]*\)")/\1/p' CMakeLists.txt)
 QGIS_MINOR=$(shell sed -ne 's/SET(CPACK_PACKAGE_VERSION_MINOR "\([0-9]*\)")/\1/p' CMakeLists.txt)
@@ -24,6 +27,7 @@ GRASS_ABI=$(subst .,,$(shell pkg-config --modversion grass|sed -e "s/\.//g" -e "
 GRASS=grass$(subst .,,$(shell pkg-config --modversion grass|cut -d. -f1,2))
 
 CMAKE_OPTS := \
+	-D BUILDNAME=$(DEB_BUILD_NAME) \
 	-D GRASS_PREFIX=/usr/lib/grass64 \
 	-D CMAKE_INSTALL_PREFIX=/usr \
 	-D CMAKE_SKIP_RPATH=TRUE \
