--- a/debian/rules
+++ b/debian/rules
@@ -43,8 +43,12 @@ CMAKE_OPTS := \
 	-D QGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin \
 	-D WITH_APIDOC=TRUE
 
-ifeq (,$(findstring $(DISTRIBUTION),"sid"))
+ifneq (,$(findstring $(DISTRIBUTION),"squeeze wheezy lucid maverick natty oneiric precise"))
 	CMAKE_OPTS += -D WITH_PYSPATIALITE=TRUE
+endif
+
+ifneq (,$(findstring $(DISTRIBUTION),"squeeze lucid maverick natty oneiric"))
+	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=TRUE
 endif
 
 ifneq (,$(findstring $(DISTRIBUTION),"squeeze lucid maverick natty oneiric"))
