update cmake and INSTALL for zlib in windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,10 +265,9 @@ FIND_PROGRAM(QT_LRELEASE_EXECUTABLE
 # if WIN32 should use zlib from QT
 FIND_PACKAGE(ZLIB)
 IF (ZLIB_FOUND)
-  MESSAGE(STATUS "Found zlib: ${ZLIB_LIBRARY}")
   SET(HAVE_ZLIB TRUE)
 ELSE (ZLIB_FOUND)
-  MESSAGE(STATUS "Could not find zlib (optional)")
+  MESSAGE(STATUS "Could not find zlib (optional), to add support set the ZLIB_INCLUDE_DIR and ZLIB_LIBRARY variables")
 ENDIF(ZLIB_FOUND)
 
 
