Revert last four accidental commits: backport wmts support: 50ba9929afaf470e9417b4779e85835648f022cc WMTS/WMS updates: 84959cb891348fa498a3eadd4b4b464dbd7f5901 missed a dialog: 4b5d2652adda3f411a37691effc435b3cbdce53a. [FEATURE] WMTS: 2130b02c20ed66095f448cb16a4e9ec2459da9e7

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -80,10 +80,12 @@ SET(QGIS_APP_SRCS
   qgsrastercalcdialog.cpp
   qgsrasterlayerproperties.cpp
   qgstextannotationdialog.cpp
+  qgswmssourceselect.cpp
   qgsshortcutsmanager.cpp
   qgssinglesymboldialog.cpp
   qgssnappingdialog.cpp
   qgsundowidget.cpp
+  qgstilescalewidget.cpp
   qgstipgui.cpp
   qgstipfactory.cpp
   qgsuniquevaluedialog.cpp
@@ -210,11 +212,13 @@ SET (QGIS_APP_MOC_HDRS
   qgssnappingdialog.h
   qgssponsors.h
   qgstextannotationdialog.h
+  qgstilescalewidget.h
   qgstipgui.h
   qgstipfactory.h
   qgsundowidget.h
   qgsuniquevaluedialog.h
   qgsvectorlayerproperties.h
+  qgswmssourceselect.h
   qgshandlebadlayers.h
 
   composer/qgsattributeselectiondialog.h
