Basic fix to get qbroswer.app working on Mac.
- More specific bundling needs added to make it a first-class app on Mac (About dialog, etc.), but this fix makes it functional.
- Different plist and simple icon were added to differentiate between QGIS and browser app.
- Browser app renamed from qbrowser.app to QGIS Browser.app

Note: QGIS Browser.app is still located in QGIS.app/Contents/MacOS/bin. For ease of launching, make a symlink or Finder alias to it.

--- a/mac/CMakeLists.txt
+++ b/mac/CMakeLists.txt
@@ -30,4 +30,7 @@ IF (APPLE)
   ENDIF (QGIS_MACAPP_BUNDLE_USER)
   # tickle app bundle
   INSTALL (CODE "EXECUTE_PROCESS(COMMAND touch \"$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/../../.\")")
+
+  # rename qbrowser
+  INSTALL (CODE "EXECUTE_PROCESS(COMMAND mv \"$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/${QGIS_BIN_DIR}/qbrowser.app\" \"$ENV{DESTDIR}${CMAKE_INSTALL_PREFIX}/${QGIS_BIN_DIR}/QGIS Browser.app\")")
 ENDIF (APPLE)
