Added test for Geoprocessing and Spatial Query

--- a/tests/src/python/CMakeLists.txt
+++ b/tests/src/python/CMakeLists.txt
@@ -5,3 +5,5 @@ ADD_PYTHON_TEST(PyQgsGeometry test_qgsgeometry.py)
 ADD_PYTHON_TEST(PyQgsRasterLayer test_qgsrasterlayer.py)
 ADD_PYTHON_TEST(PyQgsMemoryProvider test_qgsmemoryprovider.py)
 ADD_PYTHON_TEST(PyQgsLogger test_qgslogger.py)
+ADD_PYTHON_TEST(PyQgsGeoProcessing test_qgsgeoprocessing.py)
+ADD_PYTHON_TEST(PyQgsSpatialQuery test_qgsspatialquery.py)
