--- a/tests/src/python/CMakeLists.txt
+++ b/tests/src/python/CMakeLists.txt
@@ -6,3 +6,4 @@ ADD_PYTHON_TEST(PyQgsRasterLayer test_qgsrasterlayer.py)
 ADD_PYTHON_TEST(PyQgsMemoryProvider test_qgsmemoryprovider.py)
 ADD_PYTHON_TEST(PyQgsLogger test_qgslogger.py)
 ADD_PYTHON_TEST(PyQgsCoordinateTransform test_qgscoordinatetransform.py)
+ADD_PYTHON_TEST(PyQgsSymbolLayerV2 test_qgssymbollayerv2.py)
