Add staged install for db_manager plugin

--- a/python/plugins/db_manager/db_plugins/CMakeLists.txt
+++ b/python/plugins/db_manager/db_plugins/CMakeLists.txt
@@ -3,3 +3,16 @@ ADD_SUBDIRECTORY(spatialite)
 
 FILE(GLOB PY_FILES *.py)
 INSTALL(FILES ${PY_FILES} DESTINATION ${DB_MANAGER_PLUGIN_DIR}/db_plugins)
+
+# Stage install
+
+ADD_CUSTOM_TARGET(db_manager_db_plugins ALL DEPENDS ${PY_FILES})
+
+FOREACH(file ${PY_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_db_plugins
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
