--- a/python/plugins/db_manager/db_plugins/postgis/plugins/qgis_topoview/CMakeLists.txt
+++ b/python/plugins/db_manager/db_plugins/postgis/plugins/qgis_topoview/CMakeLists.txt
@@ -1,7 +1,21 @@
 SET (DB_MANAGER_POSTGIS_TOPOVIEW_DIR ${DB_MANAGER_POSTGIS_DIR}/plugins/qgis_topoview)
+SET (QGIS_TOPOVIEW_OUT_DIR ${DB_MANAGER_POSTGIS_OUT_DIR}/plugins/qgis_topoview)
 
 FILE(GLOB PY_FILES *.py)
 
 INSTALL(FILES ${PY_FILES} DESTINATION ${DB_MANAGER_POSTGIS_TOPOVIEW_DIR})
 
 ADD_SUBDIRECTORY(templates)
+
+ADD_CUSTOM_TARGET(db_manager_postgis_topoview ALL DEPENDS ${PY_FILES})
+
+# Stage install
+
+FOREACH(file ${PY_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_postgis_topoview
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${QGIS_TOPOVIEW_OUT_DIR}
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${QGIS_TOPOVIEW_OUT_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
