--- a/python/plugins/db_manager/db_plugins/postgis/plugins/qgis_topoview/templates/CMakeLists.txt
+++ b/python/plugins/db_manager/db_plugins/postgis/plugins/qgis_topoview/templates/CMakeLists.txt
@@ -1,5 +1,18 @@
-SET (DB_MANAGER_POSTGIS_TOPOVIEW_TEMPLATE_DIR ${DB_MANAGER_POSTGIS_DIR}/plugins/qgis_topoview/templates)
+SET (DB_MANAGER_POSTGIS_TOPOVIEW_TEMPLATE_DIR ${DB_MANAGER_POSTGIS_TOPOVIEW_DIR}/templates)
 
 FILE(GLOB QML_FILES *.qml)
 
 INSTALL(FILES ${QML_FILES} DESTINATION ${DB_MANAGER_POSTGIS_TOPOVIEW_TEMPLATE_DIR})
+
+# Stage install
+
+ADD_CUSTOM_TARGET(db_manager_postgis_topoview_templates ALL DEPENDS ${QML_FILES})
+
+FOREACH(file ${QML_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_postgis_topoview_templates
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${QGIS_TOPOVIEW_OUT_DIR}/templates
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${QGIS_TOPOVIEW_OUT_DIR}/templates
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
