--- a/python/plugins/db_manager/db_plugins/spatialite/CMakeLists.txt
+++ b/python/plugins/db_manager/db_plugins/spatialite/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET (DB_MANAGER_SPATIALITE_DIR ${DB_MANAGER_PLUGIN_DIR}/db_plugins/spatialite)
+SET (DB_MANAGER_SPATIALITE_OUT_DIR ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins/spatialite)
 
 FILE(GLOB PY_FILES *.py)
 FILE(GLOB ICON_FILES icons/*.png)
@@ -9,3 +10,23 @@ ADD_CUSTOM_TARGET(db_manager_spatialite ALL DEPENDS ${PYRC_FILES})
 INSTALL(FILES ${PY_FILES} DESTINATION ${DB_MANAGER_SPATIALITE_DIR})
 INSTALL(FILES ${PYRC_FILES} DESTINATION ${DB_MANAGER_SPATIALITE_DIR})
 INSTALL(FILES ${ICON_FILES} DESTINATION ${DB_MANAGER_SPATIALITE_DIR}/icons)
+
+# Stage install
+
+FOREACH(file ${PY_FILES} ${PYRC_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_spatialite
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DB_MANAGER_SPATIALITE_OUT_DIR}
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${DB_MANAGER_SPATIALITE_OUT_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
+
+FOREACH(file ${ICON_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_spatialite
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DB_MANAGER_SPATIALITE_OUT_DIR}/icons
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${DB_MANAGER_SPATIALITE_OUT_DIR}/icons
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
