--- a/python/plugins/db_manager/db_plugins/postgis/CMakeLists.txt
+++ b/python/plugins/db_manager/db_plugins/postgis/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET (DB_MANAGER_POSTGIS_DIR ${DB_MANAGER_PLUGIN_DIR}/db_plugins/postgis)
+SET (DB_MANAGER_POSTGIS_OUT_DIR ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins/postgis)
 
 FILE(GLOB PY_FILES *.py)
 FILE(GLOB ICON_FILES icons/*.png)
@@ -11,3 +12,23 @@ INSTALL(FILES ${PYRC_FILES} DESTINATION ${DB_MANAGER_POSTGIS_DIR})
 INSTALL(FILES ${ICON_FILES} DESTINATION ${DB_MANAGER_POSTGIS_DIR}/icons)
 
 ADD_SUBDIRECTORY(plugins)
+
+# Stage install
+
+FOREACH(file ${PY_FILES} ${PYRC_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_postgis
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins/postgis
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins/postgis
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
+
+FOREACH(file ${ICON_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_postgis
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins/postgis/icons
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/db_plugins/postgis/icons
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
