--- a/python/plugins/db_manager/db_plugins/postgis/plugins/versioning/CMakeLists.txt
+++ b/python/plugins/db_manager/db_plugins/postgis/plugins/versioning/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET (DB_MANAGER_POSTGIS_VERSIONING_DIR ${DB_MANAGER_POSTGIS_DIR}/plugins/versioning)
+SET (DB_MANAGER_POSTGIS_VERSIONING_OUT_DIR ${DB_MANAGER_POSTGIS_OUT_DIR}/plugins/versioning)
 
 FILE(GLOB PY_FILES *.py)
 
@@ -9,3 +10,13 @@ ADD_CUSTOM_TARGET(db_manager_postgis_versioning ALL DEPENDS ${PYUI_FILES})
 INSTALL(FILES ${PY_FILES} DESTINATION ${DB_MANAGER_POSTGIS_VERSIONING_DIR})
 INSTALL(FILES ${PYUI_FILES} DESTINATION ${DB_MANAGER_POSTGIS_VERSIONING_DIR})
 
+# Stage install
+
+FOREACH(file ${PY_FILES} ${PYUI_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_postgis_versioning
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DB_MANAGER_POSTGIS_VERSIONING_OUT_DIR}
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${DB_MANAGER_POSTGIS_VERSIONING_OUT_DIR}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
