--- a/python/plugins/db_manager/icons/CMakeLists.txt
+++ b/python/plugins/db_manager/icons/CMakeLists.txt
@@ -1,2 +1,15 @@
 FILE(GLOB ICON_FILES *.png *.xpm toolbar/*.png)
 INSTALL(FILES ${ICON_FILES} DESTINATION ${DB_MANAGER_PLUGIN_DIR}/icons)
+
+# Stage install
+
+ADD_CUSTOM_TARGET(db_manager_icons ALL DEPENDS ${ICON_FILES})
+
+FOREACH(file ${ICON_FILES})
+  ADD_CUSTOM_COMMAND(TARGET db_manager_icons
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/icons
+    COMMAND ${CMAKE_COMMAND} -E copy ${file} ${DB_MANAGER_PLUGIN_OUTPUT_DIR}/icons
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  )
+ENDFOREACH(file)
