--- a/tests/src/python/CMakeLists.txt
+++ b/tests/src/python/CMakeLists.txt
@@ -18,4 +18,5 @@ ADD_PYTHON_TEST(PyQgsSymbolLayerV2 test_qgssymbollayerv2.py)
 ADD_PYTHON_TEST(PyQgsPoint test_qgspoint.py)
 ADD_PYTHON_TEST(PyQgsAtlasComposition test_qgsatlascomposition.py)
 ADD_PYTHON_TEST(PyQgsComposerLabel test_qgscomposerlabel.py)
+ADD_PYTHON_TEST(PyQgsExpression test_qgsexpression.py)
 #ADD_PYTHON_TEST(PyQgsPalLabeling test_qgspallabeling.py)
