fix build warning and enable sample for modeler and script in sextante

--- a/python/plugins/sextante/script/CMakeLists.txt
+++ b/python/plugins/sextante/script/CMakeLists.txt
@@ -1,5 +1,5 @@
 FILE(GLOB PY_FILES *.py)
-
-ADD_SUBDIRECTORY(scripts)
+FILE(GLOB SCRIPT_FILES scripts/*.py)
 
 PLUGIN_INSTALL(sextante script ${PY_FILES})
+PLUGIN_INSTALL(sextante script/scripts ${SCRIPT_FILES})
