modified cmakelists to add topology plugin folder

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -15,6 +15,7 @@ ADD_SUBDIRECTORY(sqlanywhere)
 ADD_SUBDIRECTORY(roadgraph)
 ADD_SUBDIRECTORY(zonal_statistics)
 ADD_SUBDIRECTORY(georeferencer)
+ADD_SUBDIRECTORY(topology)
 
 IF (WITH_SPATIALITE)
   ADD_SUBDIRECTORY(offline_editing)
